<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentMoviesDetails">

    <ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBlack"
        tools:context=".FragmentMoviesDetails">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/background_origin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:foreground="@drawable/origin_round"
                android:scaleType="centerCrop"
                android:src="@drawable/orig"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/back_arrow_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_start_back_22"
                android:layout_marginTop="@dimen/margin_top_back_59"
                android:drawablePadding="8dp"
                android:text="@string/back_title"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/text_size_12"
                app:drawableStartCompat="@drawable/ic_path"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/pg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_start_pg_20"
                android:layout_marginBottom="@dimen/margin_bottom_pg_52"
                android:text="@string/pg_13"
                android:textColor="@color/colorWhite"
                app:layout_constraintBottom_toBottomOf="@id/background_origin"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/movie_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_start_movi_name_20"
                android:text="Avengers: \nEnd Game"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/text_size_40"
                app:layout_constraintBottom_toBottomOf="@id/background_origin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/background_origin" />

            <TextView
                android:id="@+id/tagline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_start_tagline_16"
                android:layout_marginTop="@dimen/margin_top_tagline_4dp"
                android:text="@string/tagline"
                android:textColor="@color/colorRed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/movie_name" />

            <RatingBar
                android:id="@+id/rating_bar"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_start_star1_16"
                android:layout_marginTop="@dimen/margin_top_star_8"
                android:progressBackgroundTint="@color/colorDarkGrey"
                android:progressTint="@color/colorPink"
                android:rating="4"
                android:secondaryProgressTint="@color/colorPink"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tagline"
                tools:rating="4" />

            <TextView
                android:id="@+id/reviews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_start_reviews_8"
                android:text="@string/reviews_count"
                android:textColor="@color/colorDarkGrey"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@id/rating_bar"
                app:layout_constraintStart_toEndOf="@id/rating_bar"
                app:layout_constraintTop_toTopOf="@id/rating_bar" />

            <TextView
                android:id="@+id/storyline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_start_storeline_16"
                android:layout_marginTop="@dimen/margin_top_storeline_24"
                android:text="@string/storyline"
                android:textColor="@color/colorGrey"
                android:textSize="@dimen/text_size_14"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/reviews" />

            <TextView
                android:id="@+id/storyline_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_horisontal_content_16"
                android:layout_marginTop="@dimen/margin_top_content_4"
                android:text="@string/storyline_content"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/text_size_14"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/storyline" />

            <TextView
                android:id="@+id/cast_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_start_cast_16"
                android:layout_marginTop="@dimen/margin_top_cast_24"
                android:text="@string/cast"
                android:textColor="@color/colorGrey"
                android:textSize="@dimen/text_size_14"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/storyline_content" />

            <ImageView
                android:id="@+id/actor1"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="@dimen/margin_start_actor_16"
                android:layout_marginTop="@dimen/margin_top_actor_7"
                android:src="@drawable/actor1"
                app:layout_constraintBottom_toTopOf="@+id/actor_title1"
                app:layout_constraintDimensionRatio="@string/actor_ratio"
                app:layout_constraintEnd_toStartOf="@id/actor2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cast_heading" />

            <TextView
                android:id="@+id/actor_title1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/robert_downey_jr"
                android:textColor="@color/colorLightGrey"
                android:textSize="@dimen/text_size_12"
                app:layout_constraintEnd_toEndOf="@id/actor1"
                app:layout_constraintStart_toStartOf="@id/actor1"
                app:layout_constraintTop_toBottomOf="@id/actor1" />

            <ImageView
                android:id="@+id/actor2"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="@dimen/margin_start_actor"
                android:src="@drawable/actor2"
                app:layout_constraintBottom_toTopOf="@id/actor_title2"
                app:layout_constraintDimensionRatio="@string/actor_ratio"
                app:layout_constraintEnd_toStartOf="@id/actor3"
                app:layout_constraintStart_toEndOf="@id/actor1"
                app:layout_constraintTop_toTopOf="@id/actor1" />

            <TextView
                android:id="@+id/actor_title2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/chris_evans"
                android:textColor="@color/colorLightGrey"
                android:textSize="@dimen/text_size_12"
                app:layout_constraintEnd_toEndOf="@id/actor2"
                app:layout_constraintStart_toStartOf="@id/actor2"
                app:layout_constraintTop_toBottomOf="@id/actor2" />

            <ImageView
                android:id="@+id/actor3"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="@dimen/margin_start_actor"
                android:src="@drawable/actor3"
                app:layout_constraintBottom_toTopOf="@id/actor_title3"
                app:layout_constraintDimensionRatio="@string/actor_ratio"
                app:layout_constraintEnd_toStartOf="@id/actor4"
                app:layout_constraintStart_toEndOf="@id/actor2"
                app:layout_constraintTop_toTopOf="@id/actor2" />

            <TextView
                android:id="@+id/actor_title3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/mark_ruffalo"
                android:textColor="@color/colorLightGrey"
                android:textSize="@dimen/text_size_12"
                app:layout_constraintEnd_toEndOf="@id/actor3"
                app:layout_constraintStart_toStartOf="@id/actor3"
                app:layout_constraintTop_toBottomOf="@id/actor3" />

            <ImageView
                android:id="@+id/actor4"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="@dimen/margin_start_actor"
                android:layout_marginEnd="@dimen/margin_end_actor_15"
                android:src="@drawable/actor4"
                app:layout_constraintBottom_toTopOf="@id/actor_title4"
                app:layout_constraintDimensionRatio="@string/actor_ratio"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/actor3"
                app:layout_constraintTop_toTopOf="@id/actor3" />

            <TextView
                android:id="@+id/actor_title4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/chris_hemsworth"
                android:textColor="@color/colorLightGrey"
                android:textSize="@dimen/text_size_12"
                app:layout_constraintEnd_toEndOf="@+id/actor4"
                app:layout_constraintStart_toStartOf="@id/actor4"
                app:layout_constraintTop_toBottomOf="@id/actor4" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</FrameLayout>